--- a/css/common.css
+++ b/css/common.css
@@ -222,6 +222,23 @@ input[type="radio"]:checked {
     background-color: rgb(var(--rgb-accent)/45%);
 }
 
+.radio-svg input {
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    -ms-appearance:none;
+    appearance:none;
+    display: none;
+}
+.radio-svg label svg {
+    width: 2.5em;
+    height: 2.5em;
+    fill: none;
+}
+.radio-svg label svg path {fill: var(--lightest-gray);}
+.radio-svg input:checked + label>svg>path{
+    fill: var(--accent);
+}
+
 input[type="search"] {
     background: url(../img/icons/search.svg) no-repeat;
     background-position: .5em 50%;
@@ -470,6 +487,7 @@ h4 {
 
 .lh_n {line-height: normal;}
 .bb_1 {border-bottom: 1px solid;}
+.tx-cross {text-decoration: line-through;}
 
 hr {
     width: 100%;
