--- a/css/common.css
+++ b/css/common.css
@@ -105,7 +105,7 @@ input, textarea {
     border: 1px solid #E0E0E0;
     background: transparent;
     border-radius: 5px;
-    padding: .3em .6em;
+    padding: .4em .6em;
     line-height: 1.2em;
     box-shadow: unset;
 }
@@ -151,6 +151,7 @@ input[type="checkbox"]:checked {
     background-size: 90%;
     background-position: center;
 }
+
 input[type="radio"]{
     -webkit-appearance:none;
     -moz-appearance:none;
@@ -159,15 +160,36 @@ input[type="radio"]{
     width: 1em;
     height: 1em;
     padding: 0px;
+    border: 2px solid #C4C4C4;
     border-radius: 50%;
     background-color: transparent;
+    position: relative;
+}
+input[type="radio"]:hover::after,
+input[type="radio"]:focus::after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    right: 2px;
+    bottom: 2px;
+    background-color: #C4C4C4;
+    border-radius: 50%;
 }
 input[type="radio"]:checked {
-    background-image: url(../img/icons/radio.svg);
-    background-repeat: no-repeat;
-    background-size: .5em;
-    background-position: center;
+    border: 2px solid var(--accent);
 }
+input[type="radio"]:checked::after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    right: 2px;
+    bottom: 2px;
+    background-color: var(--accent);
+    border-radius: 50%;
+}
+
 .radio-text {position: relative;}
 .radio-text div {
     position: relative;
@@ -496,6 +518,7 @@ hr {
     border: none;
     opacity: 1;
 }
+.flex-1 {flex:1;}
 
 .mb_4 {margin-bottom: 4em;}
 @media (max-width: 575px){
