--- a/css/style.css
+++ b/css/style.css
@@ -1028,15 +1028,15 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
 .cart-item {
     display: grid;
     grid-template-columns: 240px auto 120px;
-    grid-template-rows: 164px 50px;
-    grid-gap: 24px 24px;
+    grid-template-rows: 190px 50px;
+    grid-gap: 0px 24px;
     border-bottom: 1px solid #E0E0E0;
     padding-bottom: 1em;
     margin-bottom: 1.5em;
 }
 .cart-item img {
-    width: 240px;
-    height: 240px;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
     grid-column: 1/2;
     grid-row: 1/3;
@@ -1050,6 +1050,7 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
     grid-column: 3/4;
     grid-row: 1/2;
     font-family: var(--font-2);
+    font-size: 1.3em;
 }
 .cart-item .btns {
     grid-column: 2/4;
@@ -1082,17 +1083,72 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
 }
 .btn-del svg path {fill: var(--lightest-gray); transition: .3s ease-in-out;}
 .btn-del:hover svg path {fill: var(--accent-light);}
-
-.cart-result {
+.frame {
     border-radius: 5px;
     border: 1px solid #E0E0E0;
-    padding: 1em;
+    padding: 1.5em;
     background-color: #fff;
-    position: sticky;
-    left: 0px;
-    top: 0px;
-    width: 100%;
 }
+@media (max-width: 1199px){
+    .cart-item {
+        grid-template-columns: 200px auto 120px;
+        grid-template-rows: 160px 40px;
+        grid-gap: 0px 15px;
+    }
+}
+@media (max-width: 767px){
+    .cart-item {
+        grid-template-columns: 150px auto 100px;
+        grid-template-rows: 120px 30px;
+    }
+    .frame {padding: 1em;}
+}
+@media (max-width: 575px){
+    .cart-item {
+        grid-template-columns: 100px auto 50px;
+        grid-template-rows: 70px 30px;
+        grid-gap: 0px 5px;
+    }
+    .cart-item .info {
+        grid-column: 2/4;
+        grid-row: 1/2;
+    }
+    .cart-item .btns {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    .cart-item .price {
+        grid-column: 3/4;
+        grid-row: 2/3;
+        font-size: 1em;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
+@media (max-width: 375px){
+    .cart-item {
+        grid-template-columns: 80px auto 50px;
+        grid-template-rows: 70px 30px;
+        grid-gap: 0px 5px;
+    }
+}
+
+
+/* section 16 */
+#sec-16 nav ul {
+    list-style: none;
+    padding-left: 0px;
+    font-family: var(--font-2);
+    text-transform: uppercase;
+}
+#sec-16 nav ul li {margin-bottom: 1em;}
+#sec-16 nav ul li a.active {
+    color: var(--accent);
+    font-weight: 600;
+}
+
 
 footer {
     background-color: #202020;
