--- a/css/style.css
+++ b/css/style.css
@@ -1148,6 +1148,10 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
     color: var(--accent);
     font-weight: 600;
 }
+@media (max-width: 767px){
+    .profile .f_14, .profile .f_12 {font-size: 1em;}
+}
+
 
 
 footer {
