--- a/css/common.css
+++ b/css/common.css
@@ -285,13 +285,17 @@ select.inp-style {
     background-position: calc(100% - .5em) 50%;
     background-size: 1em;
     border-radius: 5px;
-    padding: .4em .6em;
+    padding: .4em 1.6em .4em .6em;
 }
 @media (max-width: 1399px){
-    select.inp-style {padding: .5em .6em;}
+    select.inp-style {padding: .5em 1.6em .5em .6em;}
 }
 @media (max-width: 767px){
-    select.inp-style {padding: .6em .6em;}
+    select.inp-style {
+        padding: .5em 1em .5em .5em;
+        background-position: calc(100% - .25em) 50%;
+        background-size: .7em;
+    }
 }
 
 .input-file-hidden {
@@ -407,6 +411,7 @@ button:not(:disabled){pointer-events: auto;}
     color: #fff;
     font-family: var(--font-2);
     font-weight: 600;
+    text-align: center;
 }
 
 .see-all[data-state="off"]::before {
