--- a/css/style.css
+++ b/css/style.css
@@ -1148,6 +1148,28 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
     color: var(--accent);
     font-weight: 600;
 }
+
+.mobile-nav {
+    background-color: var(--dark-gray);
+}
+.pa-menu {
+    position: relative;
+    overflow: hidden;
+    padding: .8em 0;
+}
+.pa-menu .swiper-slide {
+    width: fit-content;
+}
+.pa-menu .swiper-slide a {
+    color: var(--lightest-gray);
+    font-family: var(--font-2);
+    text-transform: uppercase;
+    font-size: 1.1em;
+}
+.pa-menu .swiper-slide a.active {
+    color: var(--accent);
+    font-weight: 500;
+}
 @media (max-width: 767px){
     .profile .f_14, .profile .f_12 {font-size: 1em;}
 }
