--- a/css/style.css
+++ b/css/style.css
@@ -1175,13 +1175,44 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
     border: 1px solid var(--lightest-gray);
     border-radius: 5px;
     padding: 1.5em 3em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.order-info {
+.order-full .title {
+    font-family: var(--font-2);
+    font-size: 1.5em;
+}
+.order-full .info {
     background-color: #F7F7F7;
     padding: 2em;
 }
+.order-full .swiper-6 .product {margin: 0 1em;}
+
+.pa-review {
+    border: 1px solid var(--lightest-gray);
+    border-radius: 5px;
+    padding: 1.5em;
+}
+
+@media (max-width: 1659px){
+    .order-full .swiper-6 .product {margin: 0 .5em;}
+}
+@media (max-width: 1399px){
+    .swiper-6 .swiper-wrapper .swiper-slide {width: calc(100% / 3);}
+    .order-full .swiper-6 .product {margin: 0 1em;}
+}
+@media (max-width: 991px){
+    .order-full .title {font-size: 1.25em;}
+    .order-full .info {padding: 1em;}
+    .swiper-6 .swiper-wrapper .swiper-slide {width: 50%;}
+}
 @media (max-width: 767px){
     .profile .f_14, .profile .f_12 {font-size: 1em;}
+    .order-full .swiper-6 .product {margin: 0 .2em;}
+}
+@media (max-width: 575px){
+    .order-preview {padding: 1em;}
 }
 
 
