--- a/css/style.css
+++ b/css/style.css
@@ -1194,6 +1194,11 @@ nav.left-menu>ul>li>ul>li>ul>li>a.active {
     border-radius: 5px;
     padding: 1.5em;
 }
+.pa-review-img {
+    width: 100%;
+    height: 320px;
+    object-fit: contain;
+}
 
 @media (max-width: 1659px){
     .order-full .swiper-6 .product {margin: 0 .5em;}
